--- a/RecordTimes/app/src/main/res/values/strings.xml
+++ b/RecordTimes/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="back"><![CDATA[<<]]></string>
     <string name="post"><![CDATA[>>]]></string>
     <string name="selected_date">selected_date</string>
+    <string name="time_view_holder">time_view_holder</string>
 </resources>
