--- a/RecordTimes/app/src/main/res/values/strings.xml
+++ b/RecordTimes/app/src/main/res/values/strings.xml
@@ -13,4 +13,11 @@
     <string name="end">終了</string>
     <string name="sample">sample</string>
     <string name="hint">hint</string>
+    <string name="monday">月</string>
+    <string name="thuesday">火</string>
+    <string name="sunday">日</string>
+    <string name="saturday">土</string>
+    <string name="friday">金</string>
+    <string name="thursday">木</string>
+    <string name="wednesday">水</string>
 </resources>
